--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,8 @@ body {
     max-width: 100vw;
     margin: 0 auto;
     /* padding-inline: 2em; */
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    font-family: "Expletus sans", sans-serif;
     color: var(--font-color);
     min-height: 100vh;
     min-height: 100dvh;
@@ -52,9 +53,9 @@ header {
     }
 
     /* nav { */
-        /* background-color: black; */
+    /* background-color: black; */
 
-        /* ul {
+    /* ul {
             display: flex;
             gap: 1em;
             list-style-type: none;
@@ -128,10 +129,23 @@ main {
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-    }
+        display: flex;
+        /* justify-content: flex-start; */
+        align-items: flex-start;
+        /* background-color: rgba(255, 255, 255, .1); */
 
-    h2 {
-        font-size: 2rem;
+        div {
+            margin-inline-start: 2rem;
+            margin-block-start: 20vh;
+            backdrop-filter: blur(2px);
+            padding: .75rem 1rem;
+            p {
+                font-size: clamp(3rem, 5vw, 5rem);
+                color: #333333;
+                line-height: 1.5;
+            }
+        }
+
     }
 }
 
