--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,10 +11,22 @@
     box-sizing: border-box;
 }
 
+/* Image resets */
 img {
     max-width: 100%;
     display: block;
-    ;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
 html {
@@ -37,94 +49,67 @@ body {
 
 /* Header */
 header {
-    width: 80vw;
-    max-width: 80vw;
-    position: sticky;
-    /* padding-block: 1em; */
-    top: 5px;
-    left: 0;
-    margin: 0 auto;
-    /* border: 1px solid; */
 
+    /* header for the class primary header */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    ;
+
+    /* Logo */
     div {
-        /* border: 1px solid; */
-        /* align-items: end; */
-        max-width: 170px;
+        /* width: clamp(); */
+        box-sizing: content-box;
+        min-width: 100px;
+        max-width: 150px;
+        padding-block: 1rem;
+        padding-inline: 2rem;
+        z-index: 999;
     }
 
-    /* nav { */
-    /* background-color: black; */
+    /* Menu button */
+    button {
+        display: none;
+    }
 
-    /* ul {
+
+    /* Navigation */
+    nav {
+
+        /* ul for the class primary-navigation */
+        ul {
+            list-style: none;
             display: flex;
-            gap: 1em;
-            list-style-type: none;
+            gap: 1rem;
 
             li {
-                display: flex;
-                padding: .2em;
-                
+
                 a {
+                    color: var(--font-color);
+                    letter-spacing: 100;
                     text-decoration: none;
-                    display: grid;
-                    grid-template-areas: "navigationLink";
-                   
-                    .active-link-text {
-                        padding-block: .5em;
-                        grid-area: navigationLink;
-
-                        &:hover {
-                            transform: scale(1.05);
-                        }
-                    }
-
-                    .active-link-border {
-                        grid-area: navigationLink;
-                        background-image: linear-gradient(to top, red 0%, red 0%, red 10%, red 10%, rgba(0, 0, 0, 0) 20%);
-                        background-size: 0% 100%;
-                        background-repeat: no-repeat;
-                        transition: background-size 200ms linear;
-
-                        &:hover {
-                            background-size: 100% 100%;
-                        }
-
-                        &:active
-                        &:focus {
-                            background-color: red;
-                        }
-
-                    }
-
-
-                    &:visited {
-                        color: var(--font-color);
-                    }
-
-                    &.active {
-                        background-image: linear-gradient(to top, red 0%, red 0%, red 10%, red 10%, rgba(0, 0, 0, 0) 20%);
-                        background-size: 100% 100%;
-                        background-repeat: no-repeat;
-                        pointer-events: none;
-                        font-weight: bold;
-                    }
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                    font-variant: small-caps;
+                    margin-inline-end: 0.75rem;
                 }
             }
-        } */
-    /* } */
+        }
+    }
+
 }
 
 /* Main */
 main {
     /* margin-block-start: 1em; */
-    flex-grow: 1;
+    /* flex-grow: 1; */
     /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; */
 
     .hero {
-        min-height: 100vh;
+        min-height: 90vh;
         background-image: url("../images/hero7.png");
         background-position: center;
         background-size: cover;
@@ -139,6 +124,7 @@ main {
             margin-block-start: 20vh;
             backdrop-filter: blur(2px);
             padding: .75rem 1rem;
+
             p {
                 font-size: clamp(3rem, 5vw, 5rem);
                 color: #333333;
@@ -161,19 +147,73 @@ footer {
     }
 }
 
-@media (max-width: 90em) {
-    body {
+@media (max-width: 50em) {
 
-        background-size: cover;
+    header {
 
-        header {
+        button {
+            display: block;
+            position: absolute;
+            top: .7rem;
+            right: 2rem;
+            z-index: 999;
+            border: none;
+            background: transparent;
 
-            div {
-                min-width: clamp(10rem, 30vw, 40rem)
+            .hamburger {
+
+                .line {
+                    transition: y 1s linear forwards;
+                    /* transition: 500ms rotate 1s; */
+                    transform-origin: center;
+                }
+
+            }
+
+            &[aria-expanded="true"] .top {
+                y: 45;
+                rotate: 45deg;
+            }
+
+            &[aria-expanded="true"] .middle {
+                opacity: 0;
+            }
+
+            &[aria-expanded="true"] .bottom {
+                y: 45;
+                rotate: -45deg;
+            }
+
+        }
+
+        nav {
+
+
+            ul {
+                position: fixed;
+                inset: 0 0 0 0;
+                backdrop-filter: blur(10px);
+                flex-direction: column;
+                padding: 10rem 2rem;
+                z-index: 100;
+                gap: 3rem;
+                transform: translateX(100%);
+                transition: transform 300ms ease-out;
+
+                &[data-visible="true"] {
+                    transform: translateX(0%);
+
+                }
+
+                li {
+
+                    a {
+                        font-size: 3rem;
+                        font-weight: 500;
+                    }
+                }
             }
         }
     }
 
 }
-
-@keyframes navigationAnimation {}
