--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-    max-width: 100vw;
+    max-width: 1550px;
     margin: 0 auto;
     /* padding-inline: 2em; */
     /* font-family: sans-serif; */
