changed size of the hero image

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,7 +7,7 @@ img {
 main {
     .hero {
         min-height: 90vh;
-        background-image: url("../images/hero7.png");
+        background-image: url("../images/hero.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
