--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,15 +101,15 @@ header {
 }
 
 /* Main */
-main {
-    /* margin-block-start: 1em; */
-    /* flex-grow: 1; */
-    /* display: flex;
+/* main {
+    margin-block-start: 1em;
+    flex-grow: 1;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     
-}
+} */
 
 /* Footer */
 footer {
