--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@ img {
 }
 
 html {
-    background-image: url("../images/background.png");
+    background-image: url("../images/background.jpg");
 }
 
 body {
