--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -55,8 +55,15 @@ main {
 
             p {
                 font-size: clamp(3rem, 5vw, 5rem);
-                color: #333333;
+                /* color: #333333; */
+                /* color: white; */
+                color: transparent;
+                background: linear-gradient(to bottom, #555555 0%, #333333 50%, #111111 100%);
+                background-clip: text;
+                text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+
                 line-height: 1.5;
+                font-weight: 500;
             }
         }
 
@@ -73,8 +80,8 @@ main {
         div {
 
             &:first-child {
-                max-width: 700px;
-                aspect-ratio: 1/1;
+                max-width: 500px;
+                aspect-ratio: 178/225;
 
             }
 
@@ -105,6 +112,7 @@ main {
             /* background-color: red; */
             display: grid;
             grid-template-areas: "about-stack";
+
             div {
 
                 &:first-child {
