--- a/assets/css/hair.css
+++ b/assets/css/hair.css
@@ -16,7 +16,7 @@ main {
 }
 
 .accordion {
-    --_button-size: 3rem;
+    --_button-size: 1rem;
     --_panel-padding: 1rem;
     display: flex;
     flex-direction: row;
@@ -49,6 +49,7 @@ main {
 
 .accordion-panel:has([aria-expanded="true"]) {
     flex-basis: clamp(50rem, 80vw, 120rem);
+    /* background-color: red; */
 }
 
 .accordion-trigger {
@@ -182,9 +183,9 @@ table {
     }
 
     .accordion-panel:has([aria-expanded="true"]) {
-        flex-basis: 80vh;
+        flex-basis: 70vh;
         min-height: unset;
-        overflow: auto;
+        /* overflow: auto; */
     }
 
     .accordion-trigger {
@@ -192,11 +193,14 @@ table {
         font-size: 1.2rem;
         letter-spacing: .05rem;
         justify-content: flex-start;
+        position: sticky;
+        inset: 0;
     }
 
     .accordion-content {
         margin-inline-start: 0;
         padding-top: 0.3rem;
+        overflow: auto;
     }
 
     .service-accordion {
@@ -204,6 +208,7 @@ table {
         --_panel-padding: 0.3rem; 
         gap: 0.2rem;
         padding-block: 0.1rem;
+        position: relative;
     }
 
     .service-accordion-panel {
@@ -213,9 +218,9 @@ table {
     }
 
     .service-accordion-panel:has([aria-expanded="true"]) {
-        flex-basis: 50vh;
+        flex-basis: 45vh;
         min-height: unset;
-        overflow: auto;
+        /* overflow: auto; */
     }
 
     .service-accordion-panel:first-child:has([aria-expanded="true"]),
@@ -229,6 +234,8 @@ table {
 
     .service-accordion-trigger {
         font-size: 1.1rem;
+        position: sticky;
+        top: 0;
     }
 
 
