--- a/assets/css/nails.css
+++ b/assets/css/nails.css
@@ -1,38 +1,135 @@
 main {
+    background-image: url("../images/nails-background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    display: flex;
+}
+
+.nails-wrapper {
+    /* background: red; */
+    flex-grow: 1;
+    margin-inline: auto;
+    padding-inline: 0.5rem;
+}
+
+/* Mobile first accordion */
+.accordion {
+    --_button-size: 2rem;
+    --_panel-padding: 0.5rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    padding-block: 0.5rem;
+    /* min-height: 100%; */
+}
+
+.accordion * {
+    margin: 0;
+}
+
+.accordion-panel {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    isolation: isolate;
+    flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size));
+    overflow: hidden;
+    padding: var(--_panel-padding);
+    border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
+
+    /* background */
+    /* background-color: rgba(255, 255, 255, 0.3); */
+    backdrop-filter: blur(3px);
+
+    transition: flex-basis 500ms;
+}
+
+.accordion-panel:has([aria-expanded="true"]) {
+    flex-basis: 80vh;
+    min-height: unset;
+    /* background-color: red; */
+}
+
+.accordion-trigger {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.2rem;
+    writing-mode: horizontal-tb;
+    color: #333333;
+    background: transparent;
+    border: 0;
+    letter-spacing: .05rem;
+    justify-content: flex-start;
+    position: sticky;
+    inset: 0;
+
+    /* background-color: rgba(255,255,255,0.4); */
+    z-index: 1;
+}
+
+.accordion-content {
+    margin-inline-start: 0;
+    padding-top: 0.3rem;
+    overflow: auto;
+}
+
+/* Inner accordion */
+.service-accordion {
+    --_button-size: 1.5rem;
+    --_panel-padding: 0.3rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    padding-block: 0.1rem;
+    position: relative;
+}  
+
+.service-accordion-panel {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    isolation: isolate;
+    flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size));
+    overflow: hidden;
+    padding: var(--_panel-padding);
+    border-radius: calc(((var(--_panel-padding) *2) + var(--_button-size)) / 2);
+    font-size: 0.85rem;
+    transition: flex-basis 500ms;
+}
+
+.service-accordion-panel:has([aria-expanded="true"]) {
+    flex-basis: 50vh;
+    overflow: auto;
+}
+
+.service-accordion-trigger {
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+    font-size: 1.1rem;
+    color: #333333;
+    background: transparent;
+    border: 0;
+    position: sticky;
+    inset: 0;
+    background-color: inherit;
+    z-index: 1;
+}
+
+.service-accordion-content {
     display: flex;
     flex-direction: column;
 }
 
-.nails-hero {
-    flex-grow: 1;
-    min-width: 100%;
-    display: flex;
-    padding-block-start: 2rem;
-    justify-content: center;
-    /* align-items: center; */
-
-    svg {
-        path {
-            fill: transparent;
-            stroke: #000;
-            /* stroke-width: 0.1; */
-            stroke-dasharray: 2000;
-            stroke-dashoffset: 2000;
-            animation: textAnimation 3s ease-out forwards;
-        }
-    }
+table {
+    font-size: 0.8rem;
 }
 
-@keyframes textAnimation {
-    0% {
-        stroke-dashoffset: 2000;
-    }
-    80% {
-        fill: transparent;
-    }
-    100% {
-        fill: #000;
-        stroke-dashoffset: 0;
-    }
+table th, table td {
+    padding: 0.2rem 0.4rem;
+    text-align: left;
 }
-
