--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,6 +155,7 @@ footer {
         position: sticky;
         top: 0;
         left: 0;
+        z-index: 1;
         /* position: relative; */
 
         button {
