--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,12 @@ body {
 header {
 
     /* header for the class primary header */
+    position: sticky;
+    top: 0;
+    left:0;
+    z-index: 1;
+    /* background-color: rgba(0,0,0, 0.1); */
+    backdrop-filter: blur(5px);
     padding: 1em 2em;
     display: flex;
     align-items: center;
@@ -119,6 +125,15 @@ main {
     align-items: center; */
     min-height: 100vh;
     min-height: 100dvh;
+
+    .hero {
+        h1 {
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            font-size: clamp(1.8rem, calc(4.125vw + 1.2rem), 6rem);
+        }
+    }
     
 }
 
@@ -157,7 +172,7 @@ footer {
         top: 0;
         left: 0;
         z-index: 1;
-        /* position: relative; */
+        position: relative;
 
         button {
             display: block;
@@ -200,21 +215,25 @@ footer {
 
         nav {
 
-
             ul {
                 position: fixed;
                 inset: 0 0 0 0;
+                background-color: (0,0,0, 0.1);
                 backdrop-filter: blur(10px);
+                --web-kit-backdrop-filter: blur(10px);
+                display: flex;
                 flex-direction: column;
                 padding: 10rem 2rem;
                 z-index: 100;
                 gap: 3rem;
                 transform: translateX(100%);
-                transition: transform 300ms ease-out;
+                transition: transform 300ms ease-out, background-color 300ms ease-out;
 
                 &[data-visible="true"] {
                     transform: translateX(0%);
-
+                    min-height: 100vh;
+                    /* background-color: red; */
+                    background-image: url("../images/background.jpg");
                 }
 
                 li {
